Mmhmhmhm, sweet ass mighty fine UX work and quiiiiiiiiz fundamentals

--- a/app/views/illnesses/index.html.erb
+++ b/app/views/illnesses/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid">
 <div class="row">
   <div class="col-md-8">
+    <%= link_to 'Quiz', 'quizzes/show', { :class => 'nav-link' } %>
     <h1 class="display-3 text-center">Vælg en kategori!</h1>
     <br>
     <div class="card-group">
