--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,9 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "wfmi-style";
+@import "progressbar";
+@import "3dbuttons";
+
 
 // Box shadow helper
 @mixin BoxShadowHelper($level: 1){
