--- a/app/views/illnesses/category.html.erb
+++ b/app/views/illnesses/category.html.erb
@@ -50,7 +50,7 @@
         <%= category_image(@category, "pull-left") %><br>
         <h1 class="display-4 pull-left"><%= @categories.first.category %></h1>
         <div class="pull-right"><br>
-          <button class="btn btn-primary btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
+          <button class="btn btn-primary btn-xs btn3d btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
         </div>
       <table class="table table-hover">
         <thead class="thead-default">
