--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
 @import "progressbar";
 @import "3dbuttons";
 @import "menubuttons";
-
+@import "counter";
 
 // Box shadow helper
 @mixin BoxShadowHelper($level: 1){
