Added summary view. Made Case model. Should it be used?

--- a/app/assets/stylesheets/counter.scss
+++ b/app/assets/stylesheets/counter.scss
@@ -28,5 +28,7 @@
 .counter { background-color: #4a4a4a; padding: 20px; border-radius: 10px;}
 .count-title { font-size: 40px; font-weight: normal;  margin-top: 5px; margin-bottom: 0; text-align: center; color: #ffffff; }
 .count-text { font-size: 13px; font-weight: normal;  margin-top: 0px; margin-bottom: 0; text-align: center; color: #ffffff; }
-.fa-3x { margin: 0 auto; float: none; display: table; color: #72e55b; }
+.fa-3x { margin: 0 auto; float: none; display: table; color: #49ade5; }
 .red { color: #e5605a;}
+.green-inverse { color: #72e55b}
+.green { color: #93e57e }
