Fixes navbar and introduces npgress-stuff. Dno how it works

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,9 @@
 @import "3dbuttons";
 @import "menubuttons";
 @import "counter";
+@import "nprogress";
+@import "nprogress-bootstrap";
+@import "nprogress-turbolinks5";
 
 // Box shadow helper
 @mixin BoxShadowHelper($level: 1){
