--- a/app/views/quizzes/summary.html.erb
+++ b/app/views/quizzes/summary.html.erb
@@ -13,7 +13,7 @@
               <div class="card-header"><h4 class="lead">Spørgsmål #<%= counter %></h4></div>
                 <span class="fa fa-thumbs-up fa-4x green p-2"></span>
               <div class="card-block p-2">
-                <h5 class=""><%= correct.symptoms.html_safe %></h5>
+                <h5 class=""><%= correct.symptoms.html_safe unless correct.symptoms.nil? %></h5>
                 <h5 class="lead">Du svarede korrekt <i><%= answer.name %>!</i></h5>
               </div>
             </div>
@@ -22,7 +22,7 @@
                 <div class="card-header"><h4 class="lead">Spørgsmål #<%= counter %></h4></div>
                 <span class="fa fa-thumbs-down fa-4x red p-2"></span>
                 <div class="card-block p-2">
-                  <h5 class=""><%= correct.symptoms.html_safe %></h5>
+                  <h5 class=""><%= correct.symptoms.html_safe unless correct.symptoms.nil? %></h5>
                   <h5 class="lead">Dit svar var <i><%= answer.name %></i>, medens det rigtige svar var <b><%= correct.name %></b></h5>
                 </div>
               </div>
