--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,7 @@
           </li>
       <% end %>
       <li class="nav-item">
-        <%= link_to(controller: :quizzes, action: :reset_game) do %>
+        <%= link_to(quizzes_reset_game_path) do %>
             <div class="snip1303">
               <span class="fa fa-gamepad center-block" style="width: 50px;display: block; padding-bottom: 4px; margin-left: 10px; margin-right: 10px; margin-top: 8px; margin-bottom: 10px;"></span>
             </div>
