--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
-<body class="site-background">
+<body class="site-background" <%= yield(:body_attributes) %>>
 <!-- Render navbar. -->
 <%= render 'layouts/navbar' %>
 <% if alert %>
