--- a/app/views/quizzes/summary.html.erb
+++ b/app/views/quizzes/summary.html.erb
@@ -1,59 +1,73 @@
 <div class="container-fluid text-center">
 <div class="row">
-  <div class="col-md-10">
+  <div class="col-md-4">
+    <h1 class="display-4 text-center">Statistik</h1>
+    <hr>
+    <div class="row">
+      <div class="col-md-6">
+        <br>
+        <div class="counter" style="box-shadow: 0 0 4px #161616;">
+          <i class="fa fa-star fa-3x gold"></i>
+          <h2 class="timer count-title count-number" data-to="<%= (session[:score].to_f/(session[:wrong_answers].to_f + session[:score].to_f))*100.0 %>" data-speed="1500"></h2>
+          <p class="count-text">Score</p>
+        </div>
+        <br>
+        <div class="counter" style="box-shadow: 0 0 4px #161616;">
+          <i class="fa fa-hashtag fa-3x light-blue"></i>
+          <h2 class="timer count-title count-number" data-to="<%= session[:score] + session[:wrong_answers] %>" data-speed="1500"></h2>
+          <p class="count-text">Antal spørgsmål</p>
+        </div>
+      </div>
+       <div class="col-md-6">
+         <br>
+         <div class="counter" style="box-shadow: 0 0 4px #161616;">
+           <i class="fa fa-check fa-3x green-inverse"></i>
+           <h2 class="timer count-title count-number" data-to="<%= session[:score] %>" data-speed="1500"></h2>
+           <p class="count-text">Korrekte svar</p>
+         </div>
+         <br>
+         <div class="counter" style="box-shadow: 0 0 4px #161616;">
+           <i class="fa fa-times fa-3x red"></i>
+           <h2 class="timer count-title count-number" data-to="<%= session[:wrong_answers] %>" data-speed="1500"></h2>
+           <p class="count-text">Forkerte svar</p>
+         </div>
+      </div>
+    </div>
+    <%= link_to 'reset_game' do %>
+        <br>
+        <div class="btn3d btn btn-warning btn-lg">
+          <span class="fa fa-refresh fa-2x"></span>
+          <br>
+          Ny quiz
+        </div>
+    <% end %>
+  </div>
+  <div class="col-md-8">
+  <div style="padding-top: 0px; padding-bottom: 0px;">
     <h1 class="display-4">Opsummering</h1>
     <hr>
-    <div class="card-group">
-      <% counter = 1 %>
-      <% session[:summary].each do |correct_id, answer_id| %>
-          <% correct = Illness.find(correct_id) %>
-          <% answer = Illness.find(answer_id) %>
-          <% if answer_id == correct_id %>
-            <div class="card card-outline-success" style="box-shadow: 0 0 3px #dedede;">
-              <div class="card-header"><h4 class="lead">Spørgsmål #<%= counter %></h4></div>
-                <span class="fa fa-thumbs-up fa-4x green p-2"></span>
-              <div class="card-block p-2">
-                <h5 class=""><%= correct.symptoms.html_safe unless correct.symptoms.nil? %></h5>
-                <h5 class="lead">Du svarede korrekt <i><%= answer.name %>!</i></h5>
-              </div>
-            </div>
-              <% else %>
-              <div class="card card-outline-danger" style="box-shadow: 0 0 3px #dedede;">
-                <div class="card-header"><h4 class="lead">Spørgsmål #<%= counter %></h4></div>
-                <span class="fa fa-thumbs-down fa-4x red p-2"></span>
-                <div class="card-block p-2">
-                  <h5 class=""><%= correct.symptoms.html_safe unless correct.symptoms.nil? %></h5>
-                  <h5 class="lead">Dit svar var <i><%= answer.name %></i>, medens det rigtige svar var <b><%= correct.name %></b></h5>
-                </div>
-              </div>
-          <% end %>
+    <ul class="timeline">
+       <% counter = 0 %>
+      <% session[:summary].each do |array| %>
+        <% correct_answer = Illness.find(array[0].to_i) %>
+        <% your_answer = Illness.find(array[1].to_i) %>
+        <% casen = Case.find(array[2]) %>
 
-          <% counter += 1 %>
+        <% if array[0] == array[1] %>
+          <%= render 'summary_timeline_element',  counter: counter, correct: true,
+                                                  casen: casen, correct_answer: correct_answer,
+                                                  your_answer: your_answer %>
+        <% else %>
+          <%= render 'summary_timeline_element',  counter: counter, correct: false,
+                                                  casen: casen, correct_answer: correct_answer,
+                                                  your_answer: your_answer %>
+        <% end %>
+        <% counter += 1 %>
       <% end %>
-    </div>
+    </ul>
   </div>
-  <div class="col-md-2">
-    <h1 class="lead text-center">Statistik</h1>
-    <hr>
-    <div class="counter" style="box-shadow: 0 0 4px #161616;">
-      <i class="fa fa-star fa-3x"></i>
-      <h2 class="timer count-title count-number" data-to="<%= session[:score] %>" data-speed="500"></h2>
-      <p class="count-text  ">Korrekte svar</p>
-    </div>
-    <br>
-    <div class="counter" style="box-shadow: 0 0 4px #161616;">
-      <i class="fa fa-times fa-3x red"></i>
-      <h2 class="timer count-title count-number" data-to="<%= session[:wrong_answers] %>" data-speed="500"></h2>
-      <p class="count-text">Forkerte svar</p>
-    </div>
   </div>
+<!-- End of row -->
 </div>
-  <hr>
-  <%= link_to 'reset_game' do %>
-      <div class="btn3d btn btn-warning btn-lg">
-        <span class="fa fa-refresh fa-2x"></span>
-        <br>
-        Reset quiz
-      </div>
-  <% end %>
+<!-- End of container -->
 </div>
