--- a/app/views/illnesses/_show_diffs.html.erb
+++ b/app/views/illnesses/_show_diffs.html.erb
@@ -1,19 +1,36 @@
 <div class="card">
-<% @other_illnesses.each do |illness| %>
-  <h1><%= illness.name %></h1> <a href = "/differentials/create?illness_id=<%=@illness.id%>;differential_id=<%= illness.id%>">associate</a>
-<% end %>
-  <% if @illness.differentials.empty? %>
+   <% if @illness.differentials.empty? %>
     <div class="card-header">
-      <h4 class="lead"><span class="fa fa-book"> </span> <del>Differentialdiagnoser</del> (WIP)</h4>
+      <h4 class="lead"><span class="fa fa-book"> </span> <del>Differentialdiagnoser</del></h4>
     </div>
   <% else %>
     <div class="card-header">
-      <h4 class="lead"><span class="fa fa-book"> </span> Differentialdiagnoser (WIP)</h4>
+      <h4 class="lead"><span class="fa fa-book"> </span> Differentialdiagnoser</h4>
     </div>
     <div class="list-group">
       <% @illness.differentials.each do |diff| %>
-          <%= link_to diff.differential.name, illness_path(diff.differential.id), class: "list-group-item list-group-item-action border-0" %><a href = "/differentials/destroy?differential_id=<%= diff.id%>">remove</a>
+        <%= link_to illness_path(diff.differential.id) do %>
+          <div class="list-group-item list-group-item-action border-0 justify-content-between">
+            <%= diff.differential.name %>
+            <% if user_signed_in? %>
+              <%= link_to controller: :differentials, action: :destroy, differential_id: diff.id do %>
+                  <span class="badge badge-danger"> Fjern</span>
+              <% end %>
+            <% end %>
+          </div>
+        <% end %>
       <% end %>
     </div>
+  <% end %>
+  <% if user_signed_in? %>
+    <div class="card-block">
+      <%= simple_form_for :diff, url: url_for(action: 'create', controller: 'differentials'), method: 'get' do |diff| %>
+        <%= diff.input :differential_id, collection: @other_illnesses, class: 'form-control', prompt: 'Tilføj en differentialdiagnose', label: false %>
+        <%= diff.hidden_field :illness_id, value: @illness.id %>
+    </div>
+    <div class="card-footer">
+      <%= diff.button :submit, class: 'btn btn-sm btn-success' %>
+    </div>
+    <% end %>
   <% end %>
 </div>
