--- a/app/views/illnesses/index.html.erb
+++ b/app/views/illnesses/index.html.erb
@@ -1,7 +1,5 @@
-<div class="container-fluid">
-<div class="row">
-  <div class="col-md-8">
-    <%= link_to 'Quiz', 'quizzes/show', { :class => 'nav-link' } %>
+<div class="container">
+  <div class="col-md-12">
     <h1 class="display-3 text-center">Vælg en kategori!</h1>
     <br>
     <div class="card-group">
@@ -11,18 +9,17 @@
     </div>
   </div>
 
-  <div class="col-md-4 bg-faded" style="box-shadow: 0px 0px 5px #b4b4b4">
+  <h1 class="lead text-center">Aktivitet</h1>
+  <div class="offset-md-2 col-md-8 bg-faded" style="box-shadow: 0px 0px 5px #b4b4b4">
       <div style="padding-top: 0px; padding-bottom: 0px;">
         <ul class="timeline">
-          <li><h1 class="lead">Aktivitet</h1></li>
-        <% for illness in @new_illnesses %>
-          <%= render 'index_timeline_element', illness: illness, counter: @counter %>
-          <% @counter += 1 %>
+          <% for illness in @new_illnesses %>
+            <%= render 'index_timeline_element', illness: illness, counter: @counter %>
+            <% @counter += 1 %>
          <% end %>
         </ul>
       </div>
   </div>
 <!-- end of row -->
-</div>
 </div>
 
